# goldo_camera

./: .gitignore  analyse_image.json  analyse_image.py  analyse_image_globber.py  analyse_image_hsv.py  analyse_image_hsv.txt  analyse_image_test.py  detect_aruco.py  main.py  requirements.txt
.github/workflows/: analyse_image.yml
aruco_detection/: README.txt  cameraCalibration.py  cosmorak.proto  cosmorak.py  eyeInTheSky.proto  eyeInTheSky.py  kalman.py  robot.py
aruco_detection/debug/: CMakeLists.txt  ocvSimpleCapture.cpp  ocvSimpleCapture.py  ocvSimpleCapture.txt
goldo_hacks/: aruco_test.py  delaunay.py  estimate_pos.py  goldo_detect_test.cpp  goldo_detect_test.py  goldo_receiver.py  main_goldo.py  main_goldo_2020.py  main_goldo_2022.py  main_goldo_2026.py  main_goldo_old.py  pix2real.py
pb/: codecs.py
pb/goldo/: __init__.py
pb/goldo/camera/: detections_pb2.py
pb2/: codecs.py
pb2/goldo/: __init__.py
